package jp.co.interprism.training.DDD3.jr.pricing.domain.fare.surcharge.superexpress;

public interface SuperExpressSurcharge {
    SuperExpressSurchargeYen calculateSuperExpressSurchargeYen();
}
